--- a/src/DomainDriven.Application/DomainDriven.Application.csproj
+++ b/src/DomainDriven.Application/DomainDriven.Application.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DomainDriven.Infrastructure\DomainDriven.Infrastructure.csproj" />
-      <ProjectReference Include="..\DomainDrivenBase.Domain\DomainDrivenBase.Domain.csproj" />
+      <ProjectReference Include="..\DomainDriven.Domain\DomainDriven.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
